@@ -54,8 +54,6 @@ void Server::sendPosition(unsigned int ra_int, int dec_int, int status)
 
 void Server::step(long long int timeout_micros)
 {
-	//BM: TODO: Remove debug:
-	*log_file << "Server::step()";
 	fd_set read_fds, write_fds;
 	FD_ZERO(&read_fds);
 	FD_ZERO(&write_fds);
@@ -65,8 +63,6 @@ void Server::step(long long int timeout_micros)
 	     it != socket_list.end();
 	     it++)
 	{
-		//BM: TODO: Remove debug:
-		*log_file << "Server::step(): Calling prepareSelectFds() for a socket";
 		(*it)->prepareSelectFds(read_fds, write_fds, fd_max);
 	}
 	
@@ -78,18 +74,12 @@ void Server::step(long long int timeout_micros)
 	const int select_rc = select(fd_max+1, &read_fds, &write_fds, 0, &tv);
 	if (select_rc > 0)
 	{
-		//BM: TODO: Remove debug:
-		*log_file << "Server::step(): select_rc returned a positive value.";
 		SocketList::iterator it(socket_list.begin());
 		while (it != socket_list.end())
 		{
-			//BM: TODO: Remove debug:
-			*log_file << "Server::step(): Calling handleSelectFds() for a socket";
 			(*it)->handleSelectFds(read_fds, write_fds);
 			if ((*it)->isClosed())
 			{
-				//BM: TODO: Remove debug:
-				*log_file << "Server::step(): Socket is closed, remove it from list";
 				SocketList::iterator tmp(it);
 				it++;
 				delete (*tmp);
